--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                   <i class="fa-solid fa-bars fa-lg"></i>
                </div>
             </div>
-            <div class="nav-box">
-               <nav class="navbar nav-active">
-                  <i class="fa-solid fa-circle-xmark fa-xl close-icon"></i>
-                  <ul>
-                     <li><a href="" class="link">Accueil</a></li>
-                     <li><a href="" class="link">Accueil</a></li>
-                     <li><a href="" class="link">Accueil</a></li>
-                     <li><a href="" class="link">Accueil</a></li>
-                  </ul>
-               </nav>
-            </div>
+            <!-- <div class="nav-box"> -->
+            <nav class="navbar">
+               <i class="fa-solid fa-circle-xmark fa-xl close-icon"></i>
+               <ul>
+                  <li><a href="" class="link">Accueil</a></li>
+                  <li><a href="" class="link">Accueil</a></li>
+                  <li><a href="" class="link">Accueil</a></li>
+                  <li><a href="" class="link">Accueil</a></li>
+               </ul>
+            </nav>
+            <!-- </div> -->
          </div>
       </header>
       <main>
@@ -197,8 +197,77 @@
                <a href=""><i class="fa-brands fa-facebook-f fa-xl"></i></a>
             </div>
          </section>
+         <!-- || LE BOUTTON POUR REVENIR EN HAUT DE LA PAGE -->
+         <button class="top-btn"><i class="fa-solid fa-caret-up fa-lg"></i></button>
       </main>
-      <footer></footer>
+      <footer>
+         <div class="container">
+            <div class="footer-grid">
+               <div class="popular-posts">
+                  <div class="heading">
+                     <span></span>
+                     <h2>Populaires</h2>
+                     <span></span>
+                  </div>
+                  <div class="footer-articles">
+                     <article class="article grid-article">
+                        <div class="article-img">
+                           <img src="/article-img.jpg" alt="" />
+                        </div>
+                        <div class="content">
+                           <h3 class="title">Titre de mon article long ou petit</h3>
+                           <div class="details">
+                              <p class="date">20 Jan 2020</p>
+                           </div>
+                        </div>
+                     </article>
+                     <article class="article grid-article">
+                        <div class="article-img">
+                           <img src="/article-img.jpg" alt="" />
+                        </div>
+                        <div class="content">
+                           <h3 class="title">Titre de mon article long ou petit</h3>
+                           <div class="details">
+                              <p class="date">20 Jan 2020</p>
+                           </div>
+                        </div>
+                     </article>
+                     <article class="article grid-article">
+                        <div class="article-img">
+                           <img src="/article-img.jpg" alt="" />
+                        </div>
+                        <div class="content">
+                           <h3 class="title">Titre de mon article long ou petit</h3>
+                           <div class="details">
+                              <p class="date">20 Jan 2020</p>
+                           </div>
+                        </div>
+                     </article>
+                  </div>
+               </div>
+               <div class="tags-box">
+                  <div class="heading">
+                     <span></span>
+                     <h2>Tags</h2>
+                     <span></span>
+                  </div>
+                  <div class="tags-grid">
+                     <div class="tag"><p># TomessBoube</p></div>
+                     <div class="tag"><p># Tomess</p></div>
+                     <div class="tag"><p># TomessBoube</p></div>
+                     <div class="tag"><p># Tomess</p></div>
+                     <div class="tag"><p># Tomess</p></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="copyright">
+            <p>
+               &#169; InfoTeck <span class="year">2022</span>. Created By
+               <span class="owner">Aboubacar Sadik</span>. All rights reserved.
+            </p>
+         </div>
+      </footer>
       <!-- JS -->
       <script src="/script.js"></script>
    </body>
