--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <title>Document</title>
+      <title>InfoTech</title>
+      <!-- Favicon -->
+      <link
+         rel="apple-touch-icon"
+         sizes="180x180"
+         href="/assets/favicon_img/apple-touch-icon.png"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="32x32"
+         href="/assets/favicon_img/favicon-32x32.png"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="16x16"
+         href="/assets/favicon_img/favicon-16x16.png"
+      />
+      <link rel="manifest" href="/assets/favicon_img/site.webmanifest" />
       <!-- css -->
       <link rel="stylesheet" href="all.css" />
       <!-- font awesome -->
@@ -47,17 +66,15 @@
                   <i class="fa-solid fa-bars fa-lg"></i>
                </div>
             </div>
-            <!-- <div class="nav-box"> -->
             <nav class="navbar">
                <i class="fa-solid fa-circle-xmark fa-xl close-icon"></i>
                <ul>
                   <li><a href="" class="link">Accueil</a></li>
                   <li><a href="" class="link">Accueil</a></li>
-                  <li><a href="" class="link">Accueil</a></li>
-                  <li><a href="" class="link">Accueil</a></li>
+                  <li><a href="" class="link">Catégories</a></li>
+                  <li><a href="" class="link">Contact</a></li>
                </ul>
             </nav>
-            <!-- </div> -->
          </div>
       </header>
       <main>
@@ -77,7 +94,7 @@
                         obcaecati?
                      </p>
                      <p class="date">20 Janvier 2022</p>
-                     <a href="" class="read-btn">Lire...</a>
+                     <button class="btn"><a href="">Lire...</a></button>
                   </div>
                   <div class="article-img">
                      <img src="/article-img.jpg" alt="" />
