--- a/index.html
+++ b/index.html
@@ -286,6 +286,6 @@
          </div>
       </footer>
       <!-- JS -->
-      <script src="/script.js"></script>
+      <script src="script.js"></script>
    </body>
 </html>
